--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ var gform;gform||(document.addEventListener("gform_main_scripts_loaded",function
 </script>
 
 <link rel="profile" href="https://gmpg.org/xfn/11">
-<title>About &#8211; Think Basis</title>
+<title>About &#8211; Think Basis Inc.</title>
 <meta name="robots" content="max-image-preview:large">
     <meta name="dc.title" content="About">
     <meta name="dc.description" content="			About Us		At Think Basis we understand that your success is our success. We share the same passion for your business and help it grow as you do. We kno">
